objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Household_Size__c</fullName>
        <label>Household Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Often__c</fullName>
        <label>How Often</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language ability of the participant.</description>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Makes sounds</fullName>
                </value>
                <value>
                    <fullName>Says words</fullName>
                </value>
                <value>
                    <fullName>Combines 2 or more words</fullName>
                </value>
                <value>
                    <fullName>Speaks in full sentences</fullName>
                </value>
                <value>
                    <fullName>Signs or gestures</fullName>
                </value>
                <value>
                    <fullName>Uses pictures, symbols</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Reviewed__c</fullName>
        <description>The date  when the information for this participant was last reviewed.</description>
        <inlineHelpText>When was the information for this participant last reviewed or updated?</inlineHelpText>
        <label>Last Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Learning_Style__c</fullName>
        <description>Participant&apos;s learning style</description>
        <label>Learning Style</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Auditory</fullName>
                </value>
                <value>
                    <fullName>Kinesthetic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked detonates permission given for using picture/video of contact in the Media</description>
        <inlineHelpText>If Media Release is checked means the contact gave his signed consent for DA to use their picture/video etc in the Media.</inlineHelpText>
        <label>Media Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medication_Name__c</fullName>
        <label>Medication Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Member_Since__c</fullName>
        <description>Date the Contact started with Daring Adventures.</description>
        <inlineHelpText>Date the Contact started with Daring Adventures.</inlineHelpText>
        <label>Member Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mobility_Additional_Details__c</fullName>
        <description>Additional details about participant mobility and physical support.</description>
        <inlineHelpText>Additional details about participant mobility and physical support.</inlineHelpText>
        <label>Additional Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mode_of_Communication__c</fullName>
        <description>The primary mode of communication of the participant (when non-verbal).</description>
        <inlineHelpText>The primary mode of communication of the participant (when non-verbal).</inlineHelpText>
        <label>Primary Mode of Communication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muscle_Spasms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muscle spasms or tone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NOT_Below_Amount_Listed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Based on household size, annual income is NOT below the amounts listed.</inlineHelpText>
        <label>NOT Below Amount Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Area_of_Interest__c</fullName>
        <inlineHelpText>List any additional areas of interest, skill, and/or certifications.</inlineHelpText>
        <label>Other Area of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Assistive_Aides__c</fullName>
        <inlineHelpText>Other types of mobility or assistive aides.</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Disability__c</fullName>
        <label>Other</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Cell_Phone__c</fullName>
        <label>Mobile Phone (g)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Email__c</fullName>
        <label>Parent/Guardian Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Home_Phone__c</fullName>
        <inlineHelpText>See &quot;Preferred Phone&quot; field.</inlineHelpText>
        <label>Home Phone (g)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Name__c</fullName>
        <label>Guardian Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian_Work_Phone__c</fullName>
        <inlineHelpText>See &quot;Preferred Phone&quot; field.</inlineHelpText>
        <label>Work Phone (g)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Participant_Name__c</fullName>
        <inlineHelpText>If a volunteer has a relationship with a participant (i.e. Sister, Caregiver), list participant&apos;s name.</inlineHelpText>
        <label>Participant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physical_Endurance__c</fullName>
        <description>Describes the physical endurance of the contact.</description>
        <inlineHelpText>Quality of the physical endurance of the contact.</inlineHelpText>
        <label>Physical Endurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Quality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_9_11_Military_program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I would prefer to work with the Post 9/11 Military program.</inlineHelpText>
        <label>Post 9/11 Military program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Problem_Solving__c</fullName>
        <label>Problem Solving</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Fair</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <description>this field is no longer in use as of 1/1/17</description>
        <inlineHelpText>Daring Adventures program the volunteer is interested in.</inlineHelpText>
        <label>Program (not in use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Post 9/11 Military program</fullName>
                </value>
                <value>
                    <fullName>Any available program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Propulsion_navigation__c</fullName>
        <description>Level of independence operating a wheelchair.</description>
        <label>Propulsion/navigation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level_of_Independence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Transportation__c</fullName>
        <description>The contact does not drive and relies on these methods of transportation.</description>
        <inlineHelpText>Can choose more than one.</inlineHelpText>
        <label>Public Transportation</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dial-a-Ride</fullName>
                </value>
                <value>
                    <fullName>Bus system</fullName>
                </value>
                <value>
                    <fullName>Light Rail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qualified_Volunteer__c</fullName>
        <description>The Volunteer has current certifications and has attended Orientation.</description>
        <formula>AND( CPR_Certificate_Expiration_Date__c &gt; TODAY() , First_Aid_Certification_Expiration_Date__c &gt;  TODAY() , Fingerprint_Clearance_Expiration_Date__c &gt;  TODAY(), 
NOT( ISNULL( Volunteer_Orientation__c ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If checked means that the Volunteer has current certifications and has attended Orientation. If it is not checked verify that the certifications are current and the Orientation field has a date.</inlineHelpText>
        <label>Qualified Program Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redirection__c</fullName>
        <description>Assistance needed for redirection to task.</description>
        <label>Redirection to Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level_of_Independence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Emergency Relationship</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_w_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is true if the participant does not have a disability, but rather is a friend or family or a Participant with a disabillity.</description>
        <inlineHelpText>Check if volunteer knows and/or works with a participant.</inlineHelpText>
        <label>Family or Friend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sensory_Details__c</fullName>
        <description>Details of sensory concerns and/or other sensitivities not included in the list.</description>
        <inlineHelpText>Details of sensory concerns and/or other sensitivities not included in the list.</inlineHelpText>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sensory_Sensitivities__c</fullName>
        <description>Participant&apos;s sensory sensitivities.</description>
        <inlineHelpText>Pick type of sensitivity from the list. If not included list it on the Additional Info field in this section.</inlineHelpText>
        <label>Sensory Sensitivities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No concerns</fullName>
                </value>
                <value>
                    <fullName>Visual</fullName>
                </value>
                <value>
                    <fullName>Auditory (hearing)</fullName>
                </value>
                <value>
                    <fullName>Tactile (touch)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skin_problems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked there are concerns about pressure sores or skin breakdown</description>
        <label>pressure sores/skin breakdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Social_Behavior__c</fullName>
        <description>The level of assistance that the participant needs to maintain appropriate social behavior</description>
        <label>Mantaining Social Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level_of_Independence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <description>Social behavior of participant.</description>
        <label>Social</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recognizes name</fullName>
                </value>
                <value>
                    <fullName>Makes eye contact</fullName>
                </value>
                <value>
                    <fullName>Knows safety awareness</fullName>
                </value>
                <value>
                    <fullName>Interacts with peers</fullName>
                </value>
                <value>
                    <fullName>Appropriate conversation</fullName>
                </value>
                <value>
                    <fullName>Takes turns</fullName>
                </value>
                <value>
                    <fullName>Understands personal space</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temperature_concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Concerns with Temperature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toileting__c</fullName>
        <description>Level of assistance that the participant requires for toileting and/or hygiene.</description>
        <inlineHelpText>Choose from the picklist according to the participant&apos;s intake form.</inlineHelpText>
        <label>Toileting/Hygiene</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level_of_Independence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Activity_Days__c</fullName>
        <description>Total number of days the Participant has spent in an activity with Daring Adventures</description>
        <label>Total Activity Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if participant needs assistance with transfers. Leave blank if participant does not need assistance.</inlineHelpText>
        <label>Transfer Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfers__c</fullName>
        <description>Level of independence with transfers.</description>
        <inlineHelpText>Level of independence with transfers.</inlineHelpText>
        <label>Transfers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Level_of_Independence</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tshirt_Size__c</fullName>
        <description>Size of t-shirt that the participant/volunteer uses.</description>
        <inlineHelpText>Size of t-shirt that the participant/volunteer uses.</inlineHelpText>
        <label>Tshirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>XL</fullName>
                </value>
                <value>
                    <fullName>XXL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Assistive_Aides__c</fullName>
        <inlineHelpText>Type of physical support</inlineHelpText>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No concerns</fullName>
                    <default>true</default>
                    <label>No concerns</label>
                </value>
                <value>
                    <fullName>Modified Independent</fullName>
                </value>
                <value>
                    <fullName>Canes/crutches</fullName>
                </value>
                <value>
                    <fullName>Walker</fullName>
                </value>
                <value>
                    <fullName>Prosthesis</fullName>
                </value>
                <value>
                    <fullName>Communication Device</fullName>
                </value>
                <value>
                    <fullName>Service Animal</fullName>
                </value>
                <value>
                    <fullName>Scooter</fullName>
                </value>
                <value>
                    <fullName>Wheelchair: Manual</fullName>
                </value>
                <value>
                    <fullName>Wheelchair: Power</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uses_Tobacco__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Participant/Volunteer smokes cigarretes or uses tobacco products.</description>
        <inlineHelpText>Participant/Volunteer smokes cigarretes or uses tobacco products.</inlineHelpText>
        <label>Uses Tobacco</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uses_e_cigarettes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Participant/Volunteer uses e-cigarettes or similar products.</description>
        <inlineHelpText>Participant/Volunteer uses e-cigarettes or similar products.</inlineHelpText>
        <label>Uses e-cigarettes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verbal_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked means that the participant has verbal communication.</description>
        <inlineHelpText>When checked means that the participant has verbal communication.</inlineHelpText>
        <label>Verbal Communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Orientation__c</fullName>
        <description>Date the volunteer attended orientation.</description>
        <inlineHelpText>Date the volunteer attended orientation.</inlineHelpText>
        <label>Orientation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Volunteer_Time_Commitment__c</fullName>
        <description>What sort of commitment is the volunteer looking for.</description>
        <inlineHelpText>Response to: What sort of commitment are you looking for?</inlineHelpText>
        <label>Volunteer Time Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Occasional Volunteer</fullName>
                </value>
                <value>
                    <fullName>Frequent Volunteer</fullName>
                </value>
                <value>
                    <fullName>Consistent Volunteer (continued commitment to one program)</fullName>
                </value>
                <value>
                    <fullName>As needed (we will call when needed)</fullName>
                </value>
                <value>
                    <fullName>No preference</fullName>
                </value>
                <value>
                    <fullName>Not sure yet...</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight of Participant/Volunteer</description>
        <inlineHelpText>Weight in pounds of Participant or Volunteer</inlineHelpText>
        <label>Weight (lbs)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_in_any_Available_program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I would like to work in any available program.</inlineHelpText>
        <label>Work in any Available program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__AlternateEmail__c</fullName>
        <description>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</description>
        <inlineHelpText>Alternate Email is an optional fourth email: Not personal, preferred, or work email.</inlineHelpText>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__HomeEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npe01__Home_Address__c</fullName>
        <description>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Home&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Uses primary address type field to determine Home Address from Mailing or Other address.</inlineHelpText>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Last_Donation_Date__c</fullName>
        <description>Formula:  The Last Donation Date of the Account where this Contact is the One to One Contact.   This has been superseded by the &apos;Last Gift Date&apos; field in the Households package.</description>
        <formula>if( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LastDonationDate__c,
null
)</formula>
        <inlineHelpText>WARNING - This field may not accurately reflect the donation history. Please use the Last Gift Date field instead.</inlineHelpText>
        <label>DEPRECATED - Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Lifetime_Giving_History_Amount__c</fullName>
        <description>Formula:  The Lifetime Donation Amount of the Account where this Contact is the One to One Contact.  This field has been superseded by the &apos;Total Amount&apos; field in the Households package.</description>
        <formula>IF( Account.npe01__One2OneContact__c = Id ,
Account.npe01__LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>WARNING- This field may not accurately reflect donation histories. Please use the Total Amount field on the Contact record instead.</inlineHelpText>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Organization_Type__c</fullName>
        <description>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</description>
        <formula>NULLVALUE(IF( Account.npe01__SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.npe01__SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: In order of preference, the SYSTEM_AccountType field, the Account Type field, and &quot;Organization&quot;.</inlineHelpText>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Other_Address__c</fullName>
        <description>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</description>
        <formula>IF(
  ISPICKVAL(npe01__Primary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(MailingStreet), &quot;&quot;, MailingStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(MailingCity), &quot;&quot;, MailingCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(MailingState), &quot;&quot;, MailingState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(MailingPostalCode), &quot;&quot;, MailingPostalCode) &amp; 
  IF(ISBLANK(MailingCountry), &quot;&quot;, &quot;, &quot; &amp;MailingCountry)
,
IF(ISPICKVAL(npe01__Secondary_Address_Type__c,&quot;Other&quot;),
  IF(ISBLANK(OtherStreet), &quot;&quot;, OtherStreet &amp; &quot;, &quot;) &amp; 
  IF(ISBLANK(OtherCity), &quot;&quot;, OtherCity &amp; &quot;, &quot;)&amp; 
  IF(ISBLANK(OtherState), &quot;&quot;, OtherState &amp; &quot; &quot;)&amp; 
  IF(ISBLANK(OtherPostalCode), &quot;&quot;, OtherPostalCode) &amp; 
  IF(ISBLANK(OtherCountry), &quot;&quot;, &quot;, &quot; &amp; OtherCountry)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: If the Primary Address Type is Other, the Mailing Address.  If the Secondary Address Type is Other, the Other Address.</inlineHelpText>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__PreferredPhone__c</fullName>
        <description>Which phone number should be used for most communications involving this Contact?</description>
        <inlineHelpText>Which phone number should be used for most communications involving this Contact?</inlineHelpText>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Contact?</description>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Alternate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Primary_Address_Type__c</fullName>
        <description>Which type of address is the mailing address?</description>
        <inlineHelpText>Which type of address is the mailing address?</inlineHelpText>
        <label>Primary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Private__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes this Contact from any Individual Account processing. If you leave the Account field blank, it will remain blank.</description>
        <inlineHelpText>Excludes this Contact from One to One or Bucket account processing.</inlineHelpText>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Secondary_Address_Type__c</fullName>
        <description>What type of address is the other address?</description>
        <inlineHelpText>What type of address is the other address?</inlineHelpText>
        <label>Secondary Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemAccountProcessor__c</fullName>
        <description>NO LONGER USED - Hidden system field: do not change.  Updated by automatic processes.  See Contacts &amp; Organization settings.</description>
        <inlineHelpText>Indicates which model drives Account relationship behavior: Individual (Bucket) or One-to-One</inlineHelpText>
        <label>DEPRECATED - _SYSTEM: ACCOUNT PROCESSOR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One-to-One</fullName>
                    <default>true</default>
                    <label>One-to-One</label>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated field.  Do not use.</description>
        <inlineHelpText>This field is no longer used and should not be referenced. It has been replaced by Type_of_Account__c</inlineHelpText>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Type_of_Account__c</fullName>
        <description>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</description>
        <formula>IF(Account.npe01__SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: &quot;Individual&quot; or &quot;Organization&quot; depending on Account setting.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__WorkEmail__c</fullName>
        <description>See Preferred Email field.</description>
        <inlineHelpText>See Preferred Email field.</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
</CustomObject>